--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "axios": "^0.27.2",
     "next": "latest",
+    "nookies": "^2.5.2",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-hook-form": "^7.30.0",
+    "react-icons": "^4.3.1",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "latest",
