--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "axios": "^0.27.2",
+    "immer": "^9.0.12",
     "next": "latest",
     "nookies": "^2.5.2",
     "react": "^18.1.0",
