--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.1",
+    "usehooks-ts": "^2.5.2",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
