--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.1.0",
     "react-dom": "latest",
     "react-hook-form": "^7.30.0",
+    "react-hotkeys-hook": "^3.4.7",
     "react-icons": "^4.3.1",
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
