--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
+    "@mantine/core": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
+    "@mantine/rte": "^5.3.0",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.0",
     "@types/react-linkify": "^1.0.1",
     "axios": "^0.27.2",
     "immer": "^9.0.12",
     "luxon": "^3.0.3",
-    "next": "latest",
+    "next": "^12.3.0",
     "nookies": "^2.5.2",
     "react": "^18.1.0",
-    "react-dom": "latest",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
     "react-hotkeys-hook": "^3.4.7",
     "react-icons": "^4.3.1",
