--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.3.1",
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
+    "socket.io-react-hook": "^1.0.17",
     "usehooks-ts": "^2.5.2",
     "zustand": "^4.0.0-rc.1"
   },
