--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
     "socket.io-react-hook": "^1.0.17",
+    "timeago.js": "^4.0.2",
     "usehooks-ts": "^2.5.2",
     "zustand": "^4.0.0-rc.1"
   },
