--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "luxon": "^3.0.3",
     "next": "^12.3.0",
     "nookies": "^2.5.2",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
