--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3003",
     "build": "next build",
+    "build:start": "next build && npm run start",
     "build:analyze": "cross-env ANALYZE=true next build",
     "start": "next start -p 3003",
     "lint": "next lint",
