--- a/package.json
+++ b/package.json
@@ -55,7 +55,13 @@
     "@types/react": "^18.0.8",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "husky": "^8.0.1",
     "jsdom": "^20.0.1",
     "typescript": "latest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test"
+    }
   }
 }
