--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@testing-library/react": "^13.4.0",
     "@types/react-linkify": "^1.0.1",
     "@vitejs/plugin-react": "^2.1.0",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "immer": "^9.0.12",
     "luxon": "^2.5.0",
