feat/cl7kzomjm25880m0do10ikp2r - ctrl s saves idea without closing

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mantine/hooks": "^5.4.1",
     "@mantine/rte": "^5.4.1",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.5",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.4",
     "@next/bundle-analyzer": "^12.3.1",
     "@testing-library/react": "^13.4.0",
@@ -41,7 +42,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
-    "react-hotkeys-hook": "^3.4.7",
+    "react-hotkeys-hook": "^4.0.4",
     "react-icons": "^4.3.1",
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
