--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.1.3",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
+    "endoh-utils": "^1.0.12",
     "immer": "^9.0.12",
     "luxon": "^2.5.0",
     "next": "^12.3.0",
