--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "endoh-utils": "^1.0.12",
+    "graphql-request": "^5.1.0",
     "immer": "^9.0.12",
     "luxon": "^2.5.0",
     "next": "^12.3.0",
@@ -43,7 +44,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
-    "react-hotkeys-hook": "^4.0.4",
+    "react-hotkeys-hook": "^4.3.2",
     "react-icons": "^4.3.1",
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
