--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "dependencies": {
     "@date-io/luxon": "^2.16.0",
-    "@emotion/cache": "latest",
-    "@emotion/react": "latest",
-    "@emotion/server": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
     "@mantine/core": "^5.4.1",
     "@mantine/hooks": "^5.4.1",
     "@mantine/rte": "^5.4.1",
@@ -57,12 +57,12 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.0.1",
-    "@types/node": "latest",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.8",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.5",
     "husky": "^8.0.1",
     "jsdom": "^20.0.1",
-    "typescript": "latest"
+    "typescript": "^4.9.4"
   }
 }
