--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_API_URL=http://localhost:8081
+# NEXT_PUBLIC_API_URL=http://localhost:8081
+
+NEXT_PUBLIC_API_URL=https://ideameter-server.herokuapp.com
 
