--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^4.3.1",
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
+    "sharp": "^0.31.3",
     "socket.io-react-hook": "^1.0.17",
     "timeago.js": "^4.0.2",
     "usehooks-ts": "^2.5.2",
