--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nookies": "^2.5.2",
     "query-string": "^7.1.1",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
     "react-hotkeys-hook": "^3.4.7",
@@ -60,6 +61,7 @@
     "@types/luxon": "^3.0.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.8",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.5",
     "husky": "^8.0.1",
