--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^4.3.1",
     "react-linkify": "^1.0.0-alpha",
     "react-query": "^3.38.1",
+    "recharts": "^2.3.2",
     "sharp": "^0.31.3",
     "socket.io-react-hook": "^1.0.17",
     "timeago.js": "^4.0.2",
