--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "test:once": "vitest run",
     "prepare": "husky install"
   },
@@ -63,6 +64,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.8",
     "@types/react-beautiful-dnd": "^13.1.3",
+    "@vitest/coverage-c8": "^0.28.4",
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.5",
     "husky": "^8.0.1",
