--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/material": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.4",
     "@next/bundle-analyzer": "^12.3.1",
+    "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@testing-library/react": "^13.4.0",
     "@types/react-linkify": "^1.0.1",
     "@vitejs/plugin-react": "^3.0.0",
